[gd_scene load_steps=23 format=3 uid="uid://dlokjdpsm6f8x"]

[ext_resource type="Theme" uid="uid://si08rmojap6x" path="res://theme.tres" id="1_g07qu"]
[ext_resource type="Script" path="res://scenes/app.gd" id="2_mg7rg"]
[ext_resource type="PackedScene" uid="uid://k0886xuesryg" path="res://scenes/screens/main/main_screen.tscn" id="3_1ytmf"]
[ext_resource type="Script" path="res://scenes/screens_container.gd" id="4_lakc1"]
[ext_resource type="Script" path="res://scenes/pages_container.gd" id="5_26340"]
[ext_resource type="PackedScene" uid="uid://di183jtkfhqik" path="res://scenes/swipe_down.tscn" id="5_qypmb"]
[ext_resource type="Texture2D" uid="uid://tkku23s5xa4i" path="res://assets/home.svg" id="6_8bkru"]
[ext_resource type="Texture2D" uid="uid://cjyrmmki1107l" path="res://assets/ui/down-arrow.svg" id="6_8v1ok"]
[ext_resource type="Texture2D" uid="uid://diujqwp3wyko4" path="res://assets/ui/tenue-a.svg" id="7_gka7q"]
[ext_resource type="Script" path="res://scenes/transition_3d.gd" id="7_tyn33"]
[ext_resource type="Script" path="res://scenes/modal_container.gd" id="8_2xnlj"]
[ext_resource type="Texture2D" uid="uid://bjjfkb4uu8col" path="res://assets/ui/tenue-c.svg" id="8_clcc3"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pk0mu"]
resource_local_to_scene = true

[sub_resource type="PlaneMesh" id="PlaneMesh_b8fxj"]
size = Vector2(1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_o1b6h"]
resource_local_to_scene = true
transparency = 1

[sub_resource type="PlaneMesh" id="PlaneMesh_xg00s"]
size = Vector2(1, 1)

[sub_resource type="Gradient" id="Gradient_h0d0x"]
offsets = PackedFloat32Array(0, 0.390909, 1)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0.754545, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_wwyk3"]
gradient = SubResource("Gradient_h0d0x")
fill_from = Vector2(0, 1)
fill_to = Vector2(0, 0)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_estqi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i1tyf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b8cno"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i05v6"]

[node name="App" type="MarginContainer"]
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_g07qu")
script = ExtResource("2_mg7rg")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0.113725, 0.113725, 0.113725, 1)

[node name="ScreenContainer" type="MarginContainer" parent="." node_paths=PackedStringArray("node_container")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 0
theme_override_constants/margin_right = 0
script = ExtResource("4_lakc1")
node_container = NodePath("ScreenScroll")

[node name="ScreenScroll" type="ScrollContainer" parent="ScreenContainer"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="MainPage" parent="ScreenContainer/ScreenScroll" instance=ExtResource("3_1ytmf")]
layout_mode = 2

[node name="PageViewport" type="SubViewportContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="PageViewport"]
own_world_3d = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(2, 2)
render_target_update_mode = 0

[node name="PageSwipeDown" parent="PageViewport/SubViewport" node_paths=PackedStringArray("scrollable_child", "content_child") instance=ExtResource("5_qypmb")]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
quit_sensitivity = 20.0
scrollable_child = NodePath("PageContainer")
content_child = NodePath("PageContainer/PageMargin/PanelContainer")

[node name="PageContainer" type="ScrollContainer" parent="PageViewport/SubViewport/PageSwipeDown" node_paths=PackedStringArray("node_container")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
vertical_scroll_mode = 3
script = ExtResource("5_26340")
node_container = NodePath("PageMargin/PanelContainer/VBoxContainer/MarginContainer2")

[node name="PageMargin" type="MarginContainer" parent="PageViewport/SubViewport/PageSwipeDown/PageContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme = ExtResource("1_g07qu")
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 850
theme_override_constants/margin_right = 40

[node name="PanelContainer" type="PanelContainer" parent="PageViewport/SubViewport/PageSwipeDown/PageContainer/PageMargin"]
layout_mode = 2
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PageViewport/SubViewport/PageSwipeDown/PageContainer/PageMargin/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="MarginContainer" type="MarginContainer" parent="PageViewport/SubViewport/PageSwipeDown/PageContainer/PageMargin/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 35

[node name="DownArrow_" type="TextureRect" parent="PageViewport/SubViewport/PageSwipeDown/PageContainer/PageMargin/PanelContainer/VBoxContainer/MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource("6_8v1ok")

[node name="DownArrow" type="TextureButton" parent="PageViewport/SubViewport/PageSwipeDown/PageContainer/PageMargin/PanelContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("6_8v1ok")

[node name="MarginContainer2" type="MarginContainer" parent="PageViewport/SubViewport/PageSwipeDown/PageContainer/PageMargin/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_bottom = 200

[node name="ModalContainer" type="MarginContainer" parent="." node_paths=PackedStringArray("node_container")]
unique_name_in_owner = true
visible = false
layout_mode = 2
script = ExtResource("8_2xnlj")
node_container = NodePath("ModalSwipeDown/ScrollContainer/FullHeight/MarginContainer/PanelContainer/VBoxContainer/MarginContainer")
background_color = Color(0.113725, 0.113725, 0.113725, 1)

[node name="ColorRect" type="ColorRect" parent="ModalContainer"]
layout_mode = 2
color = Color(0.113725, 0.113725, 0.113725, 0.501961)

[node name="ModalSwipeDown" parent="ModalContainer" node_paths=PackedStringArray("scrollable_child", "content_child") instance=ExtResource("5_qypmb")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
quit_sensitivity = 10.0
scrollable_child = NodePath("ScrollContainer")
content_child = NodePath("ScrollContainer/FullHeight/MarginContainer/PanelContainer")

[node name="ScrollContainer" type="ScrollContainer" parent="ModalContainer/ModalSwipeDown"]
layout_mode = 2
vertical_scroll_mode = 3

[node name="FullHeight" type="MarginContainer" parent="ModalContainer/ModalSwipeDown/ScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 1920)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="ModalContainer/ModalSwipeDown/ScrollContainer/FullHeight"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 10
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 650
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 0

[node name="PanelContainer" type="PanelContainer" parent="ModalContainer/ModalSwipeDown/ScrollContainer/FullHeight/MarginContainer"]
layout_mode = 2
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ModalContainer/ModalSwipeDown/ScrollContainer/FullHeight/MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="MarginContainer" type="MarginContainer" parent="ModalContainer/ModalSwipeDown/ScrollContainer/FullHeight/MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 200

[node name="Transition" type="SubViewportContainer" parent="."]
visible = false
layout_mode = 2
mouse_filter = 2
stretch = true
metadata/_edit_lock_ = true

[node name="TransitionViewport" type="SubViewport" parent="Transition"]
unique_name_in_owner = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(1080, 1920)
render_target_update_mode = 0

[node name="Transition3D" type="Node3D" parent="Transition/TransitionViewport"]
script = ExtResource("7_tyn33")

[node name="Camera3D" type="Camera3D" parent="Transition/TransitionViewport/Transition3D"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 5, 0)
keep_aspect = 0
current = true
fov = 40.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Transition/TransitionViewport/Transition3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 10, 0)
light_color = Color(0.890196, 0.890196, 0.890196, 1)

[node name="ButtonMesh" type="MeshInstance3D" parent="Transition/TransitionViewport/Transition3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.790318, -4.76837e-07, -2.78916)
layers = 0
material_override = SubResource("StandardMaterial3D_pk0mu")
mesh = SubResource("PlaneMesh_b8fxj")

[node name="PageMesh" type="MeshInstance3D" parent="Transition/TransitionViewport/Transition3D"]
transform = Transform3D(0.559193, -0.829038, 0, 0.829038, 0.559193, 0, 0, 0, 1, 0, -1.3, 0)
layers = 0
material_override = SubResource("StandardMaterial3D_o1b6h")
mesh = SubResource("PlaneMesh_xg00s")

[node name="Footer" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/margin_bottom = 0

[node name="TextureRect" type="TextureRect" parent="Footer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_wwyk3")

[node name="HBoxContainer" type="HBoxContainer" parent="Footer"]
layout_mode = 2

[node name="Button" type="Button" parent="Footer/HBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_constants/icon_max_width = 90
theme_override_font_sizes/font_size = 175
theme_override_styles/focus = SubResource("StyleBoxEmpty_estqi")
theme_override_styles/hover = SubResource("StyleBoxEmpty_i1tyf")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_b8cno")
theme_override_styles/normal = SubResource("StyleBoxEmpty_i05v6")
text = " "
icon = ExtResource("6_8bkru")
icon_alignment = 1
expand_icon = true

[node name="Button2" type="Button" parent="Footer/HBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_constants/icon_max_width = 90
theme_override_font_sizes/font_size = 175
theme_override_styles/focus = SubResource("StyleBoxEmpty_estqi")
theme_override_styles/hover = SubResource("StyleBoxEmpty_i1tyf")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_b8cno")
theme_override_styles/normal = SubResource("StyleBoxEmpty_i05v6")
text = " "
icon = ExtResource("7_gka7q")
icon_alignment = 1
expand_icon = true

[node name="Button3" type="Button" parent="Footer/HBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_constants/icon_max_width = 90
theme_override_font_sizes/font_size = 175
theme_override_styles/focus = SubResource("StyleBoxEmpty_estqi")
theme_override_styles/hover = SubResource("StyleBoxEmpty_i1tyf")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_b8cno")
theme_override_styles/normal = SubResource("StyleBoxEmpty_i05v6")
text = " "
icon = ExtResource("8_clcc3")
icon_alignment = 1
expand_icon = true

[connection signal="screen_changed" from="ScreenContainer" to="." method="screens_changed"]
[connection signal="swiping_accepted" from="PageViewport/SubViewport/PageSwipeDown" to="." method="_on_swiping_accepted"]
[connection signal="swiping_accepted" from="PageViewport/SubViewport/PageSwipeDown" to="PageViewport/SubViewport/PageSwipeDown/PageContainer" method="_on_swiping_accepted"]
[connection signal="swiping_finished" from="PageViewport/SubViewport/PageSwipeDown" to="PageViewport/SubViewport/PageSwipeDown/PageContainer" method="_on_swiping_finished"]
[connection signal="pressed" from="PageViewport/SubViewport/PageSwipeDown/PageContainer/PageMargin/PanelContainer/VBoxContainer/MarginContainer/DownArrow" to="PageViewport/SubViewport/PageSwipeDown/PageContainer" method="_on_down_arrow_pressed"]
[connection signal="swiping_accepted" from="ModalContainer/ModalSwipeDown" to="ModalContainer" method="_on_swiping_accepted"]
[connection signal="swiping_down" from="ModalContainer/ModalSwipeDown" to="ModalContainer" method="_on_swiping_down"]
[connection signal="swiping_finished" from="ModalContainer/ModalSwipeDown" to="ModalContainer" method="_on_swiping_finished"]
[connection signal="swiping_rejected" from="ModalContainer/ModalSwipeDown" to="ModalContainer" method="_on_swiping_rejected"]
[connection signal="pressed" from="Footer/HBoxContainer/Button" to="ScreenContainer" method="_on_button_nav_1_pressed"]
[connection signal="pressed" from="Footer/HBoxContainer/Button2" to="ScreenContainer" method="_on_button_nav_2_pressed"]
[connection signal="pressed" from="Footer/HBoxContainer/Button3" to="ScreenContainer" method="_on_button_nav_3_pressed"]
